# rust-web-example

./: .env  .gitignore  Cargo.toml  LICENSE  README  README.md  build.cmd  build.rs  build.sh  notes
app/: Cargo.toml
app/src/: main.rs  route.rs  wire.rs
app/src/component/: mod.rs
app/src/component/member_home/: mod.rs  view.rs
app/src/component/member_list/: mod.rs  view.rs
app/src/view/: mod.rs
config/: data.toml
migrations/20170512163129_create_user/: up.sql
migrations/20170518031422_alter_users_add_password/: down.sql  up.sql
migrations/20170614044412_create_card/: down.sql  up.sql
src/: main.rs
src/data/: connection.rs  database.rs  mod.rs  schema.rs
src/data/model/: card.rs  mod.rs  user.rs
src/route/: account_creation.rs  authentication.rs  file.rs  index.rs  member.rs  mod.rs  user.rs
src/service/: card.rs  mod.rs  user.rs
src/view/: account_creation.rs  index.rs  login.rs  member.rs  mod.rs
src/view/partial/: header.rs  mod.rs  navbar.rs
static/style/: account_creation.css  colors.css  header.css  index.css  login.css  main.css  member.css
