[package]
name = "web-example"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]
build = "build.rs"

[dependencies]
maud = { version = "*", features = ["rocket"] }
maud_macros = "*"
rocket = "0.2.6"
rocket_codegen = "0.2.6"
diesel = { version = "0.12.0", features = ["mysql"] }
diesel_codegen = { version ="0.12.0", features = ["mysql"] }
toml = "0.4"
serde = "*"
serde_derive = "*"
r2d2 = "*"
#r2d2-diesel = "*"
r2d2-diesel-mysql = { git = "https://github.com/Ameobea/r2d2-diesel.git" }
dotenv = "*"
lazy_static = "*"
bcrypt = "0.1"
time ="*"
