[package]
name = "web-example"
version = "0.1.0"
authors = ["Daniel Wilkins <daniel.wilkins@centeva.com>"]

[dependencies]
maud = { version = "*", features = ["rocket"] }
maud_macros = "*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = { version = "*", default-features = false, features = ["json"]}
diesel = { version = "0.12.0", features = ["mysql"] }
diesel_codegen = { version ="0.12.0", features = ["mysql"] }
toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
r2d2 = "*"
#r2d2-diesel = "*"
r2d2-diesel-mysql = { git = "https://github.com/Ameobea/r2d2-diesel.git" }
dotenv = "*"
lazy_static = "*"
bcrypt = "0.1"
time ="*"
